--- a/client/src/index.css
+++ b/client/src/index.css
@@ -14,30 +14,30 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
+* {
+  box-sizing: border-box;
+}
+
 body {
   margin: 0;
-  display: flex;
-  place-items: center;
-  flex-direction: column;
   min-width: 320px;
   min-height: 100vh;
 }
 
 #root {
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
-  width: 90%;
-  min-width: 600px;
-  max-width: 1280px;
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
 }
 
 a {
   font-weight: 500;
+  color: #58a6ff;
+  text-decoration: none;
 }
 
 a:hover {
-  color: #535bf2;
+  text-decoration: underline;
 }
 
 button {
@@ -51,38 +51,19 @@ button {
   transition: border-color 0.25s;
   color: black;
 }
+
 button:hover {
   border-color: #646cff;
 }
+
 button:focus,
 button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
 }
 
-td {
-  white-space: nowrap;
-  overflow: none;
-  text-overflow: ellipsis;
-}
-
-td:last-child {
-  cursor: pointer;
-}
-
-.controls {
-  display: flex;
-  gap: 1rem;
-  align-items: center;
-  margin-bottom: 1rem;
-  white-space: nowrap;
-}
-
-.controls > div {
-  flex: 1;
-  display: flex;
-  flex-direction: row;
-  justify-content: start;
-  gap: 1rem;
-  align-items: center;
-  margin-bottom: 1rem;
+@media (prefers-color-scheme: light) {
+  :root {
+    color: #213547;
+    background-color: #ffffff;
+  }
 }
