--- a/client/src/index.css
+++ b/client/src/index.css
@@ -22,9 +22,11 @@ body {
   margin: 0;
   min-width: 320px;
   min-height: 100vh;
+  position: relative;
 }
 
 #root {
+  isolation: isolate;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
