--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,5 +1,5 @@
 :root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
+  font-family: var(--bit-font);
   line-height: 1.5;
   font-weight: 400;
   font-size: 0.9em;
@@ -36,25 +36,4 @@ a {
   font-weight: 500;
   color: var(--bit-color-link);
   text-decoration: none;
-}
-
-button {
-  border-radius: var(--bit-radius-lg);
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: var(--bit-color-button-bg);
-  cursor: pointer;
-  transition: border-color 0.25s;
-  color: var(--bit-color-ink);
-}
-
-button:hover {
-  border-color: var(--bit-color-button-border-hover);
-}
-
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
 }
